<resources>
    <string name="app_name">Meu primeiro app</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="bem_vindo_fa_a_o_login">Bem-vindo, faça o login</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Map</string>
</resources>
