<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAD3D3"
    tools:context=".LoginScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/usu_rio"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:shadowColor="#231313"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="20" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="10" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="numberPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textDirection="firstStrongRtl" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="login"
            android:text="@string/entrar" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelar"
            android:text="@string/cancelar" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:fontFamily="cursive"
        android:outlineSpotShadowColor="#FFFFFF"
        android:scrollbarSize="10dp"
        android:shadowColor="#E83E3838"
        android:shadowDy="10.0"
        android:shadowRadius="10.0"
        android:text="@string/bem_vindo_fa_a_o_login"
        android:textColor="#1C0F0F"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>